@@ -59,7 +59,8 @@ ACE_LSOCK::send_handle (const ACE_HANDLE handle) const
   cmsgptr->cmsg_len = sizeof cmsgbuf;
   send_msg.msg_control = cmsgbuf;
   send_msg.msg_controllen = sizeof cmsgbuf;
-  *(ACE_HANDLE *) CMSG_DATA (cmsgptr) = handle;
+  ACE_HANDLE *ph = (ACE_HANDLE *) CMSG_DATA (cmsgptr);
+  *ph = handle;
   send_msg.msg_flags = 0;
 #else
   send_msg.msg_accrights = (char *) &handle;
@@ -143,7 +144,9 @@ ACE_LSOCK::recv_handle (ACE_HANDLE &handle, char *pbuf, ssize_t *len) const
         {
 #if defined (ACE_HAS_4_4BSD_SENDMSG_RECVMSG)
           // Close down the socket that was returned by the MSG_PEEK.
-          ACE_OS::closesocket (*(ACE_HANDLE *) CMSG_DATA ((cmsghdr *) cmsgbuf));
+          cmsghdr  *cmsgptr = (cmsghdr *) cmsgbuf;
+          ACE_HANDLE * ph = (ACE_HANDLE *) CMSG_DATA (cmsgptr);
+          ACE_OS::closesocket (*ph);
           recv_msg.msg_control = cmsgbuf;
           recv_msg.msg_controllen = sizeof cmsgbuf;
 #else
@@ -158,7 +161,8 @@ ACE_LSOCK::recv_handle (ACE_HANDLE &handle, char *pbuf, ssize_t *len) const
             {
 #if defined (ACE_HAS_4_4BSD_SENDMSG_RECVMSG)
               cmsghdr *cmsgptr = (cmsghdr *) cmsgbuf;
-              handle = *(ACE_HANDLE *) CMSG_DATA (cmsgptr);
+              ACE_HANDLE * ph = (ACE_HANDLE *) CMSG_DATA (cmsgptr);
+              handle = *ph;
 #endif /* ACE_HAS_4_4BSD_SENDMSG_RECVMSG */
               return 1;
             }
